Theming: cart > totals

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_typo.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_typo.scss
@@ -17,6 +17,10 @@ a.color-body {
     }
 }
 
+.text-wrap {
+    white-space: normal !important;
+}
+
 
 // Font weight Helpers
 // ===================
