--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/OffCanvasShoppingCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/OffCanvasShoppingCart.cshtml
@@ -106,7 +106,8 @@
 					<div class="row sm-gutters flex-wrap align-items-center mt-2">
 						<div class="col col-alpha">
                             @Html.EditorFor(x => item, "QtyInput", new { htmlAttributes = new {
-                           data_update_url = Url.Action("UpdateOcCartItem", "ShoppingCart"), data_type = "cart", data_sci_id = item.Id } })
+                               data_update_url = Url.Action("UpdateCartItem", "ShoppingCart"), data_type = "cart", data_sci_id = item.Id }
+                            })
 						</div>
 						<div class="col">
 							<span class="price unit-price">
